<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/font_style"
        android:text="회원가입"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|left"
                            android:layout_marginBottom="34dp"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/font_style"
                            android:text="아이디"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTextIdReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:ems="10"
                            android:layout_gravity="bottom"
                            android:hint="@string/editId_hint"
                            android:inputType="text" />

                        <Button
                            android:id="@+id/btnCheckIdReg"
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="right|top"
                            android:background="@drawable/solid_button_login"
                            android:fontFamily="@font/font_style"
                            android:text="중복확인"
                            android:textAlignment="center"
                            android:padding="1dp"
                            android:textSize="12sp"/>
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|left"
                            android:layout_marginBottom="34dp"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/font_style"
                            android:text="비밀번호"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTextPassReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:ems="10"
                            android:layout_gravity="bottom"
                            android:hint="@string/editPass_hint"
                            android:inputType="textPassword"/>
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|left"
                            android:layout_marginBottom="34dp"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/font_style"
                            android:text="비밀번호 확인"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTextRePassReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:ems="10"
                            android:layout_gravity="bottom"
                            android:inputType="textPassword" />

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|left"
                            android:layout_marginBottom="34dp"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/font_style"
                            android:text="닉네임"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTextNickReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:ems="10"
                            android:layout_gravity="bottom"
                            android:hint="@string/editNick_hint"
                            android:inputType="text"
                            android:maxLength="20" />

                        <Button
                            android:id="@+id/btnCheckNickReg"
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="right|top"
                            android:background="@drawable/solid_button_login"
                            android:fontFamily="@font/font_style"
                            android:text="중복확인"
                            android:textAlignment="center"
                            android:padding="1dp"
                            android:textSize="12sp"/>
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|left"
                            android:layout_marginBottom="34dp"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/font_style"
                            android:text="휴대폰"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTextPhoneReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:ems="10"
                            android:layout_gravity="bottom"
                            android:hint="@string/editPhone_hint"
                            android:inputType="number" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|left"
                            android:layout_marginBottom="34dp"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/font_style"
                            android:text="설명"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTextPhoneExp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:ems="50"
                            android:layout_gravity="bottom"
                            android:hint="@string/editExplain_hint" />

                    </FrameLayout>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnPrivateInfo"
                android:layout_width="wrap_content"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/solid_button_login"
                android:fontFamily="@font/font_style"
                android:textSize="15sp"
                android:text="개인정보 수집, 이용 안내 동의"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnRegisterReg"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:background="@drawable/solid_button_login"
                android:fontFamily="@font/font_style"
                android:textSize="18sp"
                android:text="회원가입"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>